# i3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DEPENDS  Makefile.sh  PACKAGE-MAINTAINER  README.md  RELEASE-NOTES-next  Xephyr.sh  antlr.sh  conanfile.py  conanfile.txt  config.h.in  generate-command-parser.pl  meson.build
AnyEvent-I3/: CMakeLists.txt  meson.build
AnyEvent-I3/lib/AnyEvent/: I3.pm
AnyEvent-I3/t/: 00-load.t  01-workspaces.t  02-sugar.t  boilerplate.t
docs/: debugging  hacking-howto  i3bar-protocol  ipc  layout-saving  meson.build  userguide
docs/NoName-2009-03-12/: i3.tex
docs/slides-2012-01-25/: i3.tex
docs/slides-2012-03-16/: i3.tex
i3/: CMakeLists.txt  Pytest.cmake  meson.build
i3/include/i3/: ipc.h
i3/src/: assignments.cpp  assignments.cppm  assignments.ixx  atoms.cpp  atoms.cppm  autostarts.cpp  autostarts.cppm  autostarts.ixx  bindings.c  bindings.cpp  bindings.cppm  bindings.ixx  boolstr.cpp  click.cpp  click.ixx  commands.c  commands.cpp  commands_parser.cpp  con.c  con.cpp  con.ixx  config.c  config.cpp  config_directives.c  config_directives.cpp  config_parser.c  config_parser.cpp  configuration.cpp  configuration.ixx  criteria_state.cppm  criteria_state.ixx  display_version.cpp  dpi.cpp  dpi.cppm  dpi.ixx  drag.cpp  drag.cppm  drag.ixx  draw.cpp  draw.cppm  (+141 more)
i3/src/commands/: base_commands_applier.h  command_result.h  command_result_ir.h  commands.cpp  commands.cppm  commands.h  commands.ixx  commands_applier.cpp  commands_applier.cppm  commands_applier.h  commands_applier.ixx  commands_parser.cpp  commands_parser.h
i3/src/con/: con.cpp  con.cppm  con.ixx  con_functions.cpp  concon.cpp  dockcon.cpp  floatingcon.cpp  outputcon.cpp  rootcon.cpp  workspacecon.cpp
i3/src/config/: base_config_applier.h  base_parser.h  config_applier.cpp  config_applier.cppm  config_applier.h  config_applier.ixx  configuration.cpp  configuration.cppm  configuration.h  configuration.ixx  resource_database.cppm  resource_database.h  resource_database.ixx
i3/src/handlers/: click.cpp  client_message.cpp  floating.cpp  handle_client_message.cpp  handle_configure_notify.cpp  handle_configure_request.cpp  handle_destroy.cpp  handle_enter.cpp  handle_expose.cpp  handle_focus_in.cpp  handle_key_press.cpp  handle_map.cpp  handle_mapping.cpp  handle_motion.cpp  handle_property.cpp  handle_property.cppm  handle_property.ixx  handle_property_notify.cpp  handle_screen_change.cpp  handle_unmap.cpp  (+6 more)
i3/test/: 201-config-parser.py  201-config-parser.t  201-config-parser_new.py  CMakeLists.txt  commands_applier_test.h  commands_mock.cpp  commands_new_test.cpp  commands_old_test.cpp  commands_parser.cpp  commands_parser_new.cpp  commands_parser_old.cpp  con_test.cpp  config_adapter.h  config_applier_adapter.h  config_new_test.cpp  config_old_test.cpp  config_parser.cpp  config_parser_new.cpp  config_parser_new_test.cpp  configuration_test.cpp  conftest.py  dump_node_test.cpp  foo_test.cpp  json_test.cpp  load_layout_test.cpp  manage_test.cpp  match_test.cpp  mock.cpp  mock_new.cpp  mocks.cppm  rect_test.cpp  regex_test.cpp  test_config-parser.py  test_config-parser_new.py  test_config_parser.cpp  test_resource_database.h  util_test.cpp  utils_test.cpp  workspace_manager_test.cpp
i3bar/: meson.build
i3bar/include/: child.h  configuration.h  outputs.h  util.h  workspaces.h
i3bar/src/: child.c  child.cpp  config.c  config.cpp  ipc.c  ipc.cpp  main.c  main.cpp  mode.c  mode.cpp  outputs.c  outputs.cpp  parse_json_header.cpp  workspaces.c  workspaces.cpp  xcb.c  xcb.cpp
lib/i3_ipc/: CMakeLists.txt  meson.build
lib/libev/: CMakeLists.txt  config.h.in  ecb.h  ev.cpp  ev.h
lib/xpp/: CMakeLists.txt
libi3/: CMakeLists.txt  README  boolstr.c  create_socket.c  dpi.c  fake_configure_notify.c  font.c  format_placeholders.c  get_colorpixel.c  get_config_path.c  get_exe_path.c  get_mod_mask.c  get_process_filename.c  get_visualtype.c  ipc_connect.c  ipc_recv_message.c  ipc_send_message.c  is_background_set.c  is_debug_build.c  meson.build  mkdirp.c  path_exists.c  resolve_tilde.c  root_atom_contents.c  safewrappers.c  screenshot_wallpaper.c  string.c  strndup.c  ucs2_conversion.c
libi3/include/: i3string.h  libi3.h  log.h
libi3/src/: dpi.cpp  draw_util.cpp  fake_configure_notify.cpp  font.cpp  format_placeholders.cpp  g_utf8_make_valid.cpp  get_colorpixel.cpp  get_config_path.cpp  get_exe_path.cpp  get_mod_mask.cpp  get_process_filename.cpp  get_visualtype.cpp  ipc_connect.cpp  ipc_recv_message.cpp  ipc_send_message.cpp  is_background_set.cpp  is_debug_build.cpp  log.cpp  mkdirp.cpp  path_exists.cpp  resolve_tilde.cpp  root_atom_contents.cpp  safewrappers.cpp  screenshot_wallpaper.cpp  string.c  string.cpp  ucs2_conversion.cpp
man/: i3-nagbar.man  i3.man  meson.build
testcases/: CMakeLists.txt  complete-run.pl.in  config_adapter.h  config_parser_new.cpp  inject_randr1.5.c  inject_randr1.5.cpp  meson.build  mock.cpp  mock_new.cpp  new-test
testcases/lib/: SocketActivation.pm  i3test.pm.in
testcases/t/: 113-urgent.t  133-size-hints.t  156-fullscreen-focus.t  159-socketpaths.t  165-for_window.t  166-assign.t-DISABLED  167-workspace_layout.t-DISABLED  170-force_focus_wrapping.t  172-start-on-named-ws.t  174-border-config.t  176-workspace-baf.t  177-bar-config.t  183-config-variables.t  186-regress-assign-focus-parent.t  187-commands-parser.t  189-floating-constraints.t  194-regress-floating-size.t  196-randr-output-names.t  199-ipc-mode-event.t  200-urgency-timer.t  201-config-parser.t  201-config-parser_new.t  203-regress-assign-and-move.t  208-regress-floating-criteria.t-DISABLED  209-ewmh-net-workarea.t-DISABLED  211-regress-urgency-assign.t  212-assign-urgency.t  217-NET_CURRENT_DESKTOP.t  219-ipc-window-focus.t  222-regress-dock-resize.t  226-internal-workspaces.t  228-border-widths.t  229-cleanup-tmpdir.t  230-floating-fullscreen-restart.t-DISABLED  233-regress-manage-focus-unmapped.t  235-check-config-no-x.t  237-regress-assign-focus.t  238-ipc-binding-event.t  240-focus-on-window-activation.t  241-consistent-center.t  (+97 more)
utils/: meson.build
(+426 files in other folders)
