# -*- mode: meson -*-

i3_srcs = [
  'src/assignments.cpp',
  'src/atoms.cpp',
  'src/autostarts.cpp',
  'src/bindings.cpp',
  'src/boolstr.cpp',
  'src/click.cpp',
  'src/commands.cpp',
  'src/commands_parser.cpp',
  'src/con.cpp',
  'src/config_directives.cpp',
  'src/config_parser.cpp',
  'src/configuration.cpp',
  'src/drag.cpp',
  'src/ewmh.cpp',
  'src/floating.cpp',
  'src/global.cpp',
  'src/handlers.cpp',
  'src/ipc.cpp',
  'src/is_background_set.cpp',
  'src/key_press.cpp',
  'src/load_layout.cpp',
  'src/nagbar.cpp',
  'src/main.cpp',
  'src/manage.cpp',
  'src/match.cpp',
  'src/move.cpp',
  'src/nonblock.cpp',
  'src/output.cpp',
  'src/parser_stack.cpp',
  'src/program_arguments.cpp',
  'src/randr.cpp',
  'src/rect.cpp',
  'src/regex.cpp',
  'src/render.cpp',
  'src/resize.cpp',
  'src/restore_layout.cpp',
  'src/scratchpad.cpp',
  'src/sighandler.cpp',
  'src/startup.cpp',
  'src/sync.cpp',
  'src/tree.cpp',
  'src/util.cpp',
  'src/version.cpp',
  'src/window.cpp',
  'src/workspace.cpp',
  'src/xcb.cpp',
  'src/x.cpp',
  'src/xcursor.cpp',
]

i3_srcs += command_parser
i3_srcs += config_parser

i3 = executable(
  'i3',
  i3_srcs,
  install: true,
  include_directories: [ '../lib', '../libi3/include', '../lib/i3_ipc/include', 'src/include', config_h_dir ],
  dependencies: common_deps,
  link_with: [ libi3, libi3ipc ],
)
